pre-2.X.X
   Bug Fixes
     - allow SVG resources to be selectable alongside Image resources and context menu to work in BookBrowser
     - because Linux has multiple light and dark themes (but different)
         always send out our internal theme change signal when palette changes
     - detect urls in altimg attributes in math tags and properly update them is changed
     - disable workaround for FR open interfering in MainWindow restorestate as no longer needed
     - fix incorrect custom dc:identifier creation by Metadata Editor.
     - fix missing SearchEditor Model Controls tooltips

   New Features
     - upgrade MacOS and Windows release and ci builds to use Qt 6.8.2
     - upgrade MacOS and Windows release and ci builds to embed Python 3.13.2
     - move all platforms to use cmake FindPython3 to simplify our cmake files and remove leftovers
     - add ability to easily clear an Open With editor list, without need to edit ini files
     - added new Search Menu option that will hide the Find and Replace Window if open
     - extend GetInfo to all BookBrowser file types
     - Add PythonFunctionEditor and support Python Function Replace in Sigil (experimental)
     


Sigil-2.4.2
   Bug Fixes
     - ensure CodeView code highlighting colors coincide with dark/light themes on certain Linux DEs
     - fix sigil-gumbo gumboc to work with Python 3.13+ - ie. work around backwards incompatible changes in ctypes
     - fix Replacement Chooser table to allow for multiple line row heights in Before and After fields (regression)
     - prevent too many warnings when no media types provided in OPF by generating the warning collectively
     - prevent  build warnings by using hunspell's std:string interface (not C char * ones)
     - fix files in third party code that used latin-1 encoding to now use utf-8
     - fix old use of 'python' in python code header lines to always use 'python3'